# chain-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config-backup.toml  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml
config/: network_ids.toml
examples/: bootstrap-config.toml  development-config.toml  joiner-config.toml  network-ids-config.toml
proto/: file_transfer.proto
scripts/: backup-sync.sh  benchmark.sh  health-monitor.sh  install-autoupload-systemd.sh  install-systemd.sh  setup-cluster.sh  setup-multi-instance.sh  uninstall-autoupload-systemd.sh  uninstall-systemd.sh
src/: main.rs  main.rs.bak
src/auto_upload/: mod.rs
src/config/: mod.rs
src/grpc/: mod.rs  service.rs
src/network/: client.rs  id_manager.rs  mod.rs  server.rs
src/pki/: certificate.rs  mod.rs  validator.rs
src/registry/: distributed.rs  mod.rs  node_registry.rs
src/storage/: file_manager.rs  mod.rs  network_db.rs
systemd/: uploader-autoupload.service  uploader.service  uploader@.service
